--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.7"
+    "mongoose": "^5.4.7",
+    "node-sass": "^4.11.0"
   }
 }
